src/FeeCalculator/styles.module.css
.fee-calculator {
	display: inline-block;
	flex-basis: 26.5rem;
	margin: 0.4375rem;
}

.fee-calculator fieldset {
	all: unset;
	width: 100%;
}

.fee-calculator legend,
.fee-calculator fieldset:after {
	/* all: unset; */
	border: var(--border);
	height: 2rem;
	width: 100%;
	box-sizing: border-box;
	padding: 0 0.375rem;
	line-height: 2rem;
}

.fee-calculator legend {
	border: var(--border);
	border-top-left-radius: var(--radius);
	border-top-right-radius: var(--radius);
}

.fee-calculator fieldset:after {
	content: '';
	display: block;
	border: var(--border);
	border-bottom-left-radius: var(--radius);
	border-bottom-right-radius: var(--radius);
}

.input-fields {

	border-left: var(--border);
	border-right: var(--border);
	padding: 2.375rem 2.9375rem;
}

.input-field {
	position: relative;
	margin-bottom: 1.25rem;
	display: flex;
}

.fee-calculator label {
	margin-right: 1.125rem;
	max-width: 4.1875rem;
	margin-top: 0.6875rem;
}

.fee-calculator input {
	border: var(--border);
	border-radius: var(--radius);
	height: 2.125rem;
	padding-top: 0.25rem;
	padding-left: 0.3125rem;
	width: 5.9375rem;
}
.fee-calculator input,
.fee-calculator button {
	font-size: 0.875rem;
}

.time-field input {
	width: unset;
}

.input-field:after {
	margin-left: 1.25rem;
	margin-top: 0.6875rem;
}

.cart-value-field:after {
	content: '€';
}

.delivery-distance-field:after {
	content: 'm';
}

/* .time-field {
    width: 215px;
} */

/* .input-field + .submit-field {
	margin-bottom: 20px;
	background-color: green;
} */

.submit-field {
	margin-bottom: 1.8125rem;
}

.fee-calculator button {
	cursor: pointer;
	padding: 0 10px;
	background-color: white;
	border: var(--border);
	border-radius: var(--radius);
	height: 1.875rem;
	line-height: 1.875rem;
	box-shadow: 0.25rem 0.25rem 0 0 rgba(0, 0, 0, 1);
	-webkit-box-shadow: 0.25rem 0.25rem 0 0 rgba(0, 0, 0, 1);
	-moz-box-shadow: 0.25rem 0.25rem 0 0 rgba(0, 0, 0, 1);
	transform: translate(0, 0);
}

.fee-calculator button:active {
	box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
	-webkit-box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
	-moz-box-shadow: 0 0 0 0 rgba(0, 0, 0, 1);
	transform: translate(0.25rem, 0.25rem);
}

.fee-calculator input[type="datetime-local"] {
	cursor: text;
}

input[type="datetime-local"]::-webkit-inner-spin-button,
input[type="datetime-local"]::-webkit-calendar-picker-indicator {
	/* display: none;
    -webkit-appearance: none; */
	cursor: pointer;
}

/* input["datetime-local"]::-webkit-datetime-edit
{
	padding-top: 5px;
} */

.error-message {
	width: 10.625rem;
	position: absolute;
	top: 2.4375rem;
	/* left: 70px; */
	color: var(--error-color);
	font-size: 0.625rem;
	z-index: 3;
}

.error-input {
	border-color: var(--error-color);
}

